--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "seed": "node --max-old-space-size=8192 -r ts-node/register -r dotenv/config src/scripts/seed.ts",
     "test": "jest --runInBand"
   },
   "keywords": [],
@@ -17,7 +18,6 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
@@ -26,6 +26,7 @@
     "razorpay": "^2.9.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
@@ -34,9 +35,11 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.6",
+    "dotenv": "^17.2.3",
     "jest": "^29.7.0",
     "node-mocks-http": "^1.15.0",
     "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
