--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     ports:
       - '4000:4000'
       - '5173:5173'
+    env_file:
+      - ./backend/.env
     environment:
       NODE_ENV: development
-      PORT: 4000
-      CLIENT_URL: http://localhost:5173
       VITE_API_URL: /api
       VITE_API_PROXY_TARGET: http://localhost:4000
       CHOKIDAR_USEPOLLING: '1'
